<resources>
    <string name="app_name">HiBykes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_station">Bike Station</string>
    <string name="title_home">Home</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="password_not_valid">Password is not valid !</string>
    <string name="confirm_password">Password Confirm</string>
    <string name="name">Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_maps">Maps</string>
    <string name="title_settings">Settings</string>
    <string name="hai">Hi, %s</string>
    <string name="desc">Description</string>
    <string name="list_of_station">List of Bike Stations</string>
    <string name="location">Location</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="air_pollution">Air Pollution</string>
    <string name="air_pollution_status">Air Pollution Status</string>
    <string name="title_activity_station">StationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="station">Station</string>
    <string name="bike_station">Bike Station</string>
    <string name="dash">Dash</string>
    <string name="or">Or</string>
    <string name="weather">Weather</string>
    <string name="home_desc">Let\'s Check The Bike Sharing \nInformation In Your Area !</string>
    <string name="search">Search bike station</string>
    <string name="aqi">air quality index</string>
    <string name="aqi_index">AQI</string>
    <string name="aqi_level">Aqi Level</string>
    <string name="title_prediction">Prediction Result</string>
    <string name="station_address">Jl. Perintis Kemerdekaan No. 5 KM.21, Pulo gadung, Jakarta Timur, DKI Jakarta 32811</string>
    <string name="direction">Direction</string>
    <string name="demand">Demand \nPrediction</string>
    <string name="datetime">Datetime</string>
    <string name="bike_sharing_demand_on">Bike Sharing Demand On</string>
    <string name="cd_register">Background Login</string>
    <string name="logo_hibykes">Logo HiBykes</string>
    <string name="header_register">Create New \nAccount</string>
    <string name="desc_register">Please Register With \nYour Account</string>
    <string name="header_login">Welcome \nBack !</string>
    <string name="desc_login">Please Login With \nYour Account</string>
    <string name="have_an_account">Have An Account?</string>
    <string name="dont_have_an_account">Don\'t Have An Account?</string>
    <string name="view_all">View All</string>
    <string name="find">Find A Bike Station Near You</string>
    <string name="list_station">List Station</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_desc">Bookmark Description</string>
    <string name="key_profile">key_profile</string>
    <string name="key_language">key_language</string>
    <string name="language">Language</string>
    <string name="key_notification">key_notification</string>
    <string name="notification">Notification</string>
    <string name="key_privacy">key_privacy</string>
    <string name="profile">Data Profile</string>
    <string name="key_terms">key_terms</string>
    <string name="pricacy">Privacy Policy</string>
    <string name="terms">Terms And Condition</string>
    <string name="key_logout">key_logout</string>
    <string name="logout">Logout</string>
    <string name="key_faqs">key_faqs</string>
    <string name="faqs">FAQs</string>
    <string name="key_community">key_community</string>
    <string name="message">Message</string>
    <string name="save_to_bookmark">Save to Bookmark</string>
    <string name="remove_from_bookmark">Remove from bookmark</string>
    <string name="count">0</string>
    <string name="demand_count">10</string>
<<<<<<< HEAD
    <string name="date_and_time">Date \nand Time</string>
=======
    <string name="date_and_time">Date \nand Time :</string>
    <string name="email_desi">musfiroh.desi@gmail.com</string>
    <string name="username_desi">Desi Musfiroh</string>
>>>>>>> b10c56ddc812dc991d44da107ffc89d0381ce3e9
</resources>