<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/bg_home_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="@color/white" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_sans_bold"
                android:textSize="20sp"
                android:text="@string/title_prediction"
                android:textColor="@color/white"
                android:layout_marginHorizontal="36dp"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="7dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/tv_datetime"
                        style="@style/Text.Regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/datetime"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/img_time"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/btn_save_bookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:layout_margin="20dp"
            android:visibility="visible"
            android:text="@string/save_to_bookmark"/>

        <Button
            android:id="@+id/btn_remove_bookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:layout_margin="20dp"
            android:visibility="gone"
            android:text="@string/remove_from_bookmark"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>