<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <ImageButton
                android:id="@+id/ic_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/primary"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Text.Small"
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:paddingHorizontal="8dp"
                android:text="@string/location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_location"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_user"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/img_logo"
                android:scaleType="centerCrop"
                android:background="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/Text.Medium"
            android:text="@string/hai"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            style="@style/Text.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_desc"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="20dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_weather"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:elevation="20dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/card_pollution"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_pollution"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:elevation="20dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/card_weather"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/Text.Medium"
            android:text="@string/list_of_station"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_station"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>